fix: fix image overflow problem

--- a/src/pages/apps/cruise/article/detail/ArticleDetail.less
+++ b/src/pages/apps/cruise/article/detail/ArticleDetail.less
@@ -2,5 +2,5 @@
 
 .article img {
   // https://stackoverflow.com/questions/72068063/is-it-possible-to-custom-the-image-size-of-dangerouslysetinnerhtml-in-react
-  max-width: 100%;
+  max-width: 90%;
 }
